# event_based_living

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_backend.sh
api/: api.py
event_based_living_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
event_service/: __main__.py  chain.py  classification_utils.py  crawler.py  db_utils.py  deduplication_utils.py  embedding_utils.py  enrichment_utils.py  main.py  models.py  repository.py  sites.txt
event_service/enums/: event_types.py  models.py
tests/: test_deduplication_utils.py
